# RuT0MarkFlow

./: .gitignore  README.md  VERSIONING.md  index.html  package.json  pnpm-lock.yaml  version-manifest.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 01-需求文档.md  02-页面与交互说明.md  03-技术设计文档.md  04-开发任务清单.md  05-验收记录.md  README.md
docs/qa/: 00-审计清单.md  01-文档与实现一致性审计.md  02-前端代码审计.md  03-Rust与Tauri审计.md  04-测试构建与发布审计.md  05-验证记录.md  06-问题总表与整改优先级.md  README.md
docs/releases/: README.md  releasing.md  (+1 more)
handoff/: FINAL-ACCEPTANCE.md  HANDOFF.md  TASK-BOARD.md  TASK-PT1-HANDOFF.md  TASK-PT1-REPORT.md  TASK-PT1-REVIEW.md  VERIFICATION-REPORT.md  ZCODE-BRIDGE-REVIEW.md  ZCODE-BRIDGE-VERIFICATION.md  pressure-test-report.json
scripts/: check-repo-hygiene.mjs  check-version-sync.mjs  pressure-test-workspace.mjs
src/: main.tsx  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: document.rs  health.rs  mod.rs  state.rs  updater.rs  workspace.rs
src-tauri/src/models/: dirty_state.rs  document.rs  mod.rs  response.rs  settings.rs  version.rs  workspace.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/document/: reader.rs  writer.rs
src-tauri/src/modules/errors/: app_error.rs
src-tauri/src/modules/settings/: persistence.rs
src-tauri/src/modules/workspace/: indexer.rs  mod.rs  scanner.rs  watcher.rs
src-tauri/tests/: pressure_bench.rs
tools/: zcode-bridge.mjs
(+84 files in other folders)
