[package]
name = "rut0markflow"
version = "0.1.4"
license = "MIT"
description = "RuT0MarkFlow — A Markdown workspace browser and editor"
authors = []
edition = "2021"

[lib]
name = "rut0markflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", default-features = true }
encoding_rs = "0.8"
tauri-plugin-updater = "2"

[profile.release]
strip = true
lto = "thin"
